add docker url in api docs
